refactor(api): Rename `displayName` to `title` and remove `description`
